thai/index: Add 'composition' label before grapheme grammar lines

--- a/thai/index.html
+++ b/thai/index.html
@@ -262,7 +262,7 @@
 <figcaption>Grapheme cluster boundaries split spacing vowel signs from their base consonants, but not combining characters.</figcaption>
 </figure-->
 
-<p><code>Base SARA_AM? Combining_mark*</code></p>
+<p>Composition: <code>Base SARA_AM? Combining_mark*</code></p>
 
 <p>Combining marks may include zero or more of the following types of character, grouped by labels that correspond to Unicode Indic syllabic category values.</p>
 
