--- a/khmer/index.html
+++ b/khmer/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div id="sotd">
-    <p>This document describes the basic requirements for Khmer script layout and text support on the Web and in eBooks. These requirements provide information for Web technologies such as CSS, HTML and digital publications about how to support users of Khmer scripts. Currently the document focuses on Khmer as used for the Khmer language. The information here is developed in conjunction with a <a href="../gap-analysis/khmer-gap.html">document that summarises gaps</a> in support on the Web for Khmer.</p>
+    <p>This document describes the basic requirements for Khmer script layout and text support on the Web and in eBooks. These requirements provide information for Web technologies such as CSS, HTML and digital publications about how to support users of Khmer scripts. Currently the document focuses on Khmer as used for the Khmer language. The information here is developed in conjunction with a <a href="https://www.w3.org/TR/khmr-gap/">document that summarises gaps</a> in support on the Web for Khmer.</p>
 	<p>The editor's draft of this document is being developed by the <a href="https://github.com/w3c/sealreq/">Southeast Asian Layout Task Force</a>, part of the W3C <a href="https://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="https://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
 	</div>
 
