Link to the Internationalization Glossary

--- a/javanese/index.html
+++ b/javanese/index.html
@@ -31,6 +31,7 @@
 
       group: "i18n",
    	  github:	"w3c/sealreq",
+      xref: ["i18n-glossary"],
     };
   </script>
   <link rel="stylesheet" href="local.css" type="text/css">
@@ -75,7 +76,7 @@
   </section>
 <section id="h_script_overview">
   <h2>Javanese Script Overview</h2>
-    <p>Javanese is an <span class="newterm"><a class="termref" href="https://www.unicode.org/glossary/#abugida">abugida</a></span>, ie. consonants carry an inherent vowel sound that is overridden, where needed, using vowel signs. In Javanese, consonants carry an inherent vowel, which can be <span class="trans">a</span> or <span class="trans">o</span>.</p>
+    <p>Javanese is an <span class="newterm"><a class="termref">abugida</a></span>, ie. consonants carry an inherent vowel sound that is overridden, where needed, using vowel signs. In Javanese, consonants carry an inherent vowel, which can be <span class="trans">a</span> or <span class="trans">o</span>.</p>
 			<p>An orthographic syllable in Javanese can be described as {C F} C {{R}Y} {V{A}} {Z}, where:</p>
 <ul>
 <li>C is a consonant (or consonant + <span class="codepoint" translate="no"><bdi lang="jv">◌꦳</bdi><code class="uname">U+A9B3 JAVANESE SIGN CECAK TELU​</code></span>),</li>
