--- a/khmer/index.html
+++ b/khmer/index.html
@@ -32,7 +32,8 @@
       group: "i18n",
 
  
- 	  github:	"w3c/sealreq",
+      github:	"w3c/sealreq",
+      xref: ["i18n-glossary"],
     };
   </script>
   <link rel="stylesheet" href="local.css" type="text/css">
@@ -77,7 +78,7 @@
   </section>
 <section id="h_script_overview">
   <h2>Khmer Script Overview</h2>
-    <p>The script is an <span class="newterm"><a class="termref" href="https://www.unicode.org/glossary/#abugida">abugida</a></span>, ie. like most Brahmi-influenced scripts, each consonant carries with it an inherent vowel. The sound following a consonant can be modified by attaching vowel signs to the consonant when writing.</p>
+    <p>The script is an <span class="newterm"><a class="termref">abugida</a></span>, ie. like most Brahmi-influenced scripts, each consonant carries with it an inherent vowel. The sound following a consonant can be modified by attaching vowel signs to the consonant when writing.</p>
 			<p>Glyphs constituting a single syllable can appear on any side of the base character, and multiple diacritics are often needed to create the vowel in a syllable.</p>
 <p>A key feature of Khmer is that there are a large number of vowel sounds, and only a few vowel signs; and there are a large number of consonant letters for only a small number of consonant sounds. This lead to a system where there are generally two consonant signs for a given sound, each belonging to one of two classes (or registers). So to determine the pronunciation of a vowel sign you start by seeing which class of consonant it follows. For example, using the two symbols for the sound <span class="ipa">k</span>, <span class="ex" lang="km">ក</span> is <span class="ipa">kɑː</span> <span class="meaning">neck</span>, and <span class="ex" lang="km">គ</span> is <span class="ipa">kɔː</span> <span class="meaning">mute</span>.</p>
 <p>Consonants stack in Khmer, but not always in a predictable way. Multiple consonants at the start and (sometimes) end of a syllable are usually stacked. Consonant clusters in a multisyllabic word also tend to stack. But syllable-final consonants, which can be one of a number of characters, often don't stack with the onset consonant of the next syllable.</p>
