--- a/lao/index.html
+++ b/lao/index.html
@@ -32,7 +32,8 @@
       group: "i18n",
 
  
- 	  github:	"w3c/sealreq",
+      github:	"w3c/sealreq",
+      xref: ["i18n-glossary"],
     };
   </script>
   <link rel="stylesheet" href="local.css" type="text/css">
@@ -79,7 +80,7 @@
 <section id="h_script_overview">
   <h2>Lao Script Overview</h2>
     <p>Lao is an alphabet. This means that it is phonetic in nature, where each letter represents a basic sound.</p>
-<p>The script was originally an <span class="newterm"><a class="termref" href="https://www.unicode.org/glossary/#abugida">abugida</a></span>, but since the script reforms leading up to 1960 it has been alphabetic. The syllable is the unit for various aspects of the behaviour of the script. Lao is a tonal language, and the script is designed to reflect tonal information.</p>
+<p>The script was originally an <span class="newterm"><a class="termref">abugida</a></span>, but since the script reforms leading up to 1960 it has been alphabetic. The syllable is the unit for various aspects of the behaviour of the script. Lao is a tonal language, and the script is designed to reflect tonal information.</p>
 <p>The alphabet is split into vowels and consonants. The consonants are grouped into classes that affect the default tonal behaviour of a syllable. There are no independent vowels. Where there is no consonant to support a vowel sign, the character ອ [U+0EAD LAO LETTER O] is used as a support. Vowel signs are typically used in combinations to form the vowel sounds of a syllable.</p>
 <p>Words are not separated by spaces. Text runs horizontally, left to right.</p>
 <p><a href="https://r12a.github.io/scripts/lao/">Lao script summary</a> can be read for a high level overview of characters used for the script, and some basic features. Text from that the latter part of that page was used for the initial version of this document.</p>
